force-app/main/default/objects/Team_Season_Stats__c/Team_Season_Stats__c.object-meta.xml
<CustomObject>
    <description>Aggregated team performance per season/competition</description>
    <label>Team Season Stats</label>
    <nameField>
        <label>Team Season Stats Name</label>
        <type>AutoNumber</type>
        <displayFormat>TSS-{000000}</displayFormat>
    </nameField>
    <pluralLabel>Team Season Stats</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>