force-app/main/default/objects/Team_Season_Stats__c/fields/Average_Score__c.field-meta.xml
<CustomField>
    <fullName>Average_Score__c</fullName>
    <label>Average Score</label>
    <type>Number</type>
    <precision>6</precision>
    <scale>2</scale>
    <description>Cricket: Average runs per innings</description>
</CustomField>