force-app/main/default/objects/Team_Season_Stats__c/fields/Clean_Sheets__c.field-meta.xml
<CustomField>
    <fullName>Clean_Sheets__c</fullName>
    <label>Clean Sheets</label>
    <type>Number</type>
    <precision>3</precision>
    <scale>0</scale>
    <defaultValue>0</defaultValue>
    <description>Soccer: Matches with zero goals conceded</description>
</CustomField>