force-app/main/default/objects/Team_Season_Stats__c/fields/Draws__c.field-meta.xml
<CustomField>
    <fullName>Draws__c</fullName>
    <label>Draws</label>
    <type>Number</type>
    <precision>3</precision>
    <scale>0</scale>
    <defaultValue>0</defaultValue>
</CustomField>