force-app/main/default/objects/Team_Season_Stats__c/fields/Form_Last_5__c.field-meta.xml
<CustomField>
    <fullName>Form_Last_5__c</fullName>
    <label>Form (Last 5)</label>
    <type>Text</type>
    <length>10</length>
    <description>Last 5 results e.g. WWDLW</description>
</CustomField>