force-app/main/default/objects/Team_Season_Stats__c/fields/Goal_Difference__c.field-meta.xml
<CustomField>
    <fullName>Goal_Difference__c</fullName>
    <label>Goal Difference</label>
    <type>Number</type>
    <precision>4</precision>
    <scale>0</scale>
    <defaultValue>0</defaultValue>
    <description>Soccer: Goals For minus Goals Against</description>
</CustomField>