force-app/main/default/objects/Team_Season_Stats__c/fields/Goals_Against__c.field-meta.xml
<CustomField>
    <fullName>Goals_Against__c</fullName>
    <label>Goals Against</label>
    <type>Number</type>
    <precision>4</precision>
    <scale>0</scale>
    <defaultValue>0</defaultValue>
    <description>Soccer: Total goals conceded</description>
</CustomField>