force-app/main/default/objects/Team_Season_Stats__c/fields/Highest_Score__c.field-meta.xml
<CustomField>
    <fullName>Highest_Score__c</fullName>
    <label>Highest Score</label>
    <type>Number</type>
    <precision>4</precision>
    <scale>0</scale>
    <description>Cricket: Highest team innings total</description>
</CustomField>