force-app/main/default/objects/Team_Season_Stats__c/fields/Home_Wins__c.field-meta.xml
<CustomField>
    <fullName>Home_Wins__c</fullName>
    <label>Home Wins</label>
    <type>Number</type>
    <precision>3</precision>
    <scale>0</scale>
    <defaultValue>0</defaultValue>
</CustomField>