force-app/main/default/objects/Team_Season_Stats__c/fields/League_Position__c.field-meta.xml
<CustomField>
    <fullName>League_Position__c</fullName>
    <label>League Position</label>
    <type>Number</type>
    <precision>2</precision>
    <scale>0</scale>
    <description>Current league standing</description>
</CustomField>