force-app/main/default/objects/Team_Season_Stats__c/fields/Matches_Played__c.field-meta.xml
<CustomField>
    <fullName>Matches_Played__c</fullName>
    <label>Matches Played</label>
    <type>Number</type>
    <precision>3</precision>
    <scale>0</scale>
    <defaultValue>0</defaultValue>
</CustomField>