force-app/main/default/objects/Team_Season_Stats__c/fields/Points__c.field-meta.xml
<CustomField>
    <fullName>Points__c</fullName>
    <label>Points</label>
    <type>Number</type>
    <precision>4</precision>
    <scale>0</scale>
    <defaultValue>0</defaultValue>
    <description>League points (e.g. 3 for win, 1 for draw)</description>
</CustomField>