force-app/main/default/objects/Team_Season_Stats__c/fields/Points_Against__c.field-meta.xml
<CustomField>
    <fullName>Points_Against__c</fullName>
    <label>Points Against</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>0</scale>
    <defaultValue>0</defaultValue>
    <description>Rugby/AFL: Total points conceded</description>
</CustomField>