force-app/main/default/objects/Team_Season_Stats__c/fields/Points_For__c.field-meta.xml
<CustomField>
    <fullName>Points_For__c</fullName>
    <label>Points For</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>0</scale>
    <defaultValue>0</defaultValue>
    <description>Rugby/AFL: Total points scored</description>
</CustomField>