force-app/main/default/objects/Team_Season_Stats__c/fields/Red_Cards__c.field-meta.xml
<CustomField>
    <fullName>Red_Cards__c</fullName>
    <label>Red Cards</label>
    <type>Number</type>
    <precision>3</precision>
    <scale>0</scale>
    <defaultValue>0</defaultValue>
    <description>Soccer: Total red cards received</description>
</CustomField>