force-app/main/default/objects/Team_Season_Stats__c/fields/Runs_Conceded__c.field-meta.xml
<CustomField>
    <fullName>Runs_Conceded__c</fullName>
    <label>Runs Conceded</label>
    <type>Number</type>
    <precision>6</precision>
    <scale>0</scale>
    <defaultValue>0</defaultValue>
    <description>Cricket: Total runs conceded</description>
</CustomField>