force-app/main/default/objects/Team_Season_Stats__c/fields/Runs_Scored__c.field-meta.xml
<CustomField>
    <fullName>Runs_Scored__c</fullName>
    <label>Runs Scored</label>
    <type>Number</type>
    <precision>6</precision>
    <scale>0</scale>
    <defaultValue>0</defaultValue>
    <description>Cricket: Total runs scored</description>
</CustomField>