force-app/main/default/objects/Team_Season_Stats__c/fields/Season_Year__c.field-meta.xml
<CustomField>
    <fullName>Season_Year__c</fullName>
    <label>Season Year</label>
    <type>Text</type>
    <length>10</length>
    <description>Season identifier e.g. 2025-26</description>
</CustomField>