force-app/main/default/objects/Team_Season_Stats__c/fields/Tries_Against__c.field-meta.xml
<CustomField>
    <fullName>Tries_Against__c</fullName>
    <label>Tries Against</label>
    <type>Number</type>
    <precision>4</precision>
    <scale>0</scale>
    <defaultValue>0</defaultValue>
    <description>Rugby: Total tries conceded</description>
</CustomField>