force-app/main/default/objects/Team_Season_Stats__c/fields/Tries_For__c.field-meta.xml
<CustomField>
    <fullName>Tries_For__c</fullName>
    <label>Tries For</label>
    <type>Number</type>
    <precision>4</precision>
    <scale>0</scale>
    <defaultValue>0</defaultValue>
    <description>Rugby: Total tries scored</description>
</CustomField>