force-app/main/default/objects/Team_Season_Stats__c/fields/Wickets_Taken__c.field-meta.xml
<CustomField>
    <fullName>Wickets_Taken__c</fullName>
    <label>Wickets Taken</label>
    <type>Number</type>
    <precision>4</precision>
    <scale>0</scale>
    <defaultValue>0</defaultValue>
    <description>Cricket: Total wickets taken</description>
</CustomField>