force-app/main/default/objects/Team_Season_Stats__c/fields/Yellow_Cards__c.field-meta.xml
<CustomField>
    <fullName>Yellow_Cards__c</fullName>
    <label>Yellow Cards</label>
    <type>Number</type>
    <precision>4</precision>
    <scale>0</scale>
    <defaultValue>0</defaultValue>
    <description>Soccer: Total yellow cards received</description>
</CustomField>